# col

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
doc/: col.md  col_base.md  col_stream.md  col_type_traits.md  stringt.md
src/col_base/: CMakeLists.txt  README.md  col_base.h  col_baseTest.cpp  inclusion_col_base.h
src/col_static_assert/: col_static_assert.h  col_static_assertTest.cpp  inclusion_col_static_assert.h
src/col_stream/: CMakeLists.txt  README.md  bstream.h  bstreamTest.cpp  bstream_operator.h  col_stream.h  col_streamTest.cpp  col_xstream.h  inclusion_col_stream.h
src/col_type_traits/: CMakeLists.txt  README.md  col_type_traits.h  col_type_traitsTest.cpp  inclusion_col_type_traits.h
src/cowl_debugout/: README.md  cowl_debugout.h  cowl_debugoutTest.cpp  cowl_xdebugout.h
src/debugout/: README.md  debugout.h  debugoutTest.cpp  inclusion_debugout.h  xdebugout.h
src/funct/: CMakeLists.txt  README.md  funct.h  functTest.cpp  inclusion_funct.h
src/stringt/: CMakeLists.txt  README.md  inclusion_stringt.h  stringt.h  stringtTest.cpp  xstringt.h
src/tvalue/: CMakeLists.txt  inclusion_tvalue.h  tvalue.h  tvalueTest.cpp
